Parallelized statistics generation. Much faster now.
Going to look into doing the same for the algorithms but I'm worried about how one thread will affect the performance of another

--- a/resources/testConfiguration.json
+++ b/resources/testConfiguration.json
@@ -13,9 +13,9 @@
       "location": "resources/dns.cap"
     },
     {
-      "type": "text",
-      "location": "resources/alice.txt"
+      "type": "pcap",
+      "location": "resources/tcpdump.pcap"
     }
   ],
-  "times": 2
+  "times": 50
 }
